--- a/Kiwi.html
+++ b/Kiwi.html
@@ -15,6 +15,7 @@
   <meta name="keywords" content="Lavpris">
   <meta name="keywords" content="10 kroners marked">
   <link rel="stylesheet" href="stylesheet.css"> <!-- For Grid setup</-->
+  <link rel="stylesheet" href="RemaStylesheet.css">
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css"> <!-- Et stylesheet som gjør du kan sette egne stiler </-->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat"> <!-- Enda et stylesheet for å endre utsende </-->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -62,7 +63,16 @@
 
   <main>
     <h1 class="w3-xxlarge w3-center w3-opacity">Studentmat - et godt tilbud </h1>
-    <h2 class="w3-xxlarge w3-center">KIWI ER NORGES BESTE DAGLIGVAREKJEDE! </h2>
+    <div class="Rema-grid">
+      <p class="offer1"><img src="images/kiwi/firstpriceentrecote.PNG" alt="Entrecote"><br>First Price Entrecote <br> kr 24,70</p>
+      <p class="offer2"><img src="images/Brus.png" alt="Grans Brus"> <br> Grans Brus <br> 4 for 60</p>
+      <p class="offer3"><img src="images/Farris.jpg" alt="Farris"> <br> Farris <br> 4 for 50</p>
+      <p class="offer4"><img src="images/Kaffe.jpg" alt="Kjeldsbeg Kaffe"> <br> Kjeldsberg Kaffe <br> 4 for 75</p>
+      <p class="offer5"><img src="images/Nordfjor.jpg" alt="Nordfjord paalegg"> <br> Nordfjord Pålegg <br> 2 for 25</p>
+      <p class="offer6"><img src="images/Skinke.jpg" alt="Strynskinke"> <br> Strynskinke <br> 2 for 79</p>
+      <p class="offer7"><img src="images/Burger.jpg" alt="Burger"> <br> Burgers <br> 2 for 89</p>
+      <p class="offer8"><img src="images/Tapas.jpg" alt="TAPAS/SMÅRETTER LILLE SKINKEFABRIKK"> <br> TAPAS/SMÅRETTER LILLE SKINKEFABRIKK  <br> 3 for 60</p>
+     </div>
   </main>
 
 
